# Code-Assist-CLI

./: .gitignore  CLI-DESIGN.md  Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: build.yml
local/MACOS/CONFIG-STEPS/: MACOS-Zscaler.md
local/MACOS/USER-DIRECTORY/.claude/: settings.json
local/MACOS/USER-DIRECTORY/certs/: ._ZscalerRootCertificate-2048-SHA256.crt
local/WIN/USER-DIRECTORY/AppData/Roaming/Code/User/: settings.json
local/WIN/USER-DIRECTORY/CONFIG-STEPS/: CC-Path.md  WIN11-Zscaler.md
src/: main.rs
src/cli/: mod.rs
src/config/: mod.rs
src/download/: mod.rs
src/platform/: macos.rs  mod.rs  windows.rs
src/prerequisites/: mod.rs
src/tools/: claude_code.rs  mod.rs
