[package]
name = "code-assist"
version = "0.1.0"
edition = "2021"
description = "Cross-platform CLI for installing AI coding assistants in enterprise environments"
authors = ["Your Organization"]
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
indicatif = "0.17"
console = "0.15"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
